# AWS-Bedrock-Wrapper-to-OpenAI-Compatible

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.tests  Makefile  Readme.md  api_auth.db  api_keys.db  corrrect.sh  docker-compose.yml  edge_docs.md  lcov.info  tarpaulin-report.html
.github/workflows/: rust-ci.yml
Design/: MemoryDesign.md
docker/localstack/: setup.sh
docs/: API_SPEC.md  ARCHITECTURE.md  ERROR_REFERENCE.md  LOGIC_STEPS.md  README.md  TEST_COVERAGE.md
src/: chat.rs  config.rs  lib.rs  logging.rs  main.rs  middleware.rs  models.rs  router.rs  state.rs
src/application/: mod.rs
src/application/chat/: mod.rs
src/application/embedding/: mod.rs
src/domain/: mod.rs
src/domain/auth/: mod.rs  service.rs  types.rs
src/domain/chat/: anthropic_types.rs  capabilities.rs  errors.rs  mod.rs  types.rs
src/domain/embedding/: builder.rs  mod.rs  types.rs
src/domain/logging/: logger.rs  mod.rs  types.rs
src/handlers/: auth.rs  chat.rs  embedding.rs  logger.rs  message.rs  mod.rs  models.rs
src/infrastructure/: mod.rs
src/infrastructure/anthropic_translator/: mod.rs  request.rs
src/infrastructure/aws/: mod.rs
src/infrastructure/aws/bedrock/: anthropic_translator.rs  converse.rs  mod.rs
src/infrastructure/bedrock/: converse.rs  invoke.rs  mod.rs
src/infrastructure/cache/: file_cache.rs  mod.rs
src/infrastructure/cloudflare/: client.rs  client.rs.tmp.3132.1776297338137  mod.rs
src/infrastructure/persistence/: mod.rs
src/interface/: mod.rs
src/interface/anthropic/: messages_handler.rs  mod.rs
src/interface/chat/: chat_handler.rs  mod.rs  reasoning_handler.rs  thinking_handler.rs
src/interface/common/: mod.rs
src/interface/common/embedding/: mod.rs
src/interface/common/models/: mod.rs
src/interface/embedding/: embedding_handler.rs  mod.rs
src/interface/models/: mod.rs  models_handler.rs
src/interface/openai/: completions.rs  mod.rs
src/interface/openai/chat/: chat_handler.rs  mod.rs  reasoning_handler.rs  thinking_handler.rs
src/provider/: bedrock.rs  mod.rs  registry.rs
src/shared/: app_state.rs  constants.rs  errors.rs  extractors.rs  logging.rs  mod.rs
src/types/: compactor.rs  mod.rs  openai.rs
tests/: cloudflare_client_test.rs
tests/common/: mod.rs
tests/integration/: auth.rs  cloudflare_api.rs  logging.rs  mod.rs
