[package]
name = "aws-bedrock-translation-to-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1", "json", "macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrock = { version = "1", default-features = false }
aws-sdk-bedrockruntime = { version = "1", default-features = false }

async-stream = "0.3.6"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
