[package]
name = "aws-bedrock-translation-to-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1", "json", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrock = { version = "1", default-features = false }
aws-sdk-bedrockruntime = { version = "1", default-features = false }

async-stream = "0.3.6"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tracing = "0.1"
dotenvy = "0.15"
axum-extra = { version = "0.12.5", features = ["typed-header"] }

bytes = "1.11.1"
clickhouse = { version = "0.14.3", features = ["chrono"] }
arc-swap = "1.9.0"
rusqlite = "0.39.0"

